{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 105,
  "lineage": "f95b2a03-cb21-a3fc-7b97-871f8dc7f224",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/networkInterfaces/nic",
            "internal_domain_name_suffix": "poyg3axwqffunjtwo5yrocifvg.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/publicIPAddresses/ip",
                "subnet_id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet"
              }
            ],
            "location": "centralindia",
            "mac_address": "00-22-48-D4-DD-65",
            "name": "nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg",
            "virtual_machine_id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Compute/virtualMachines/vm"
          },
          "dependencies": [
            "azurerm_public_ip.ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "location": "centralindia",
            "name": "nsg",
            "resource_group_name": "rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgrule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/nsg/securityRules/nsgrule",
            "name": "nsgrule",
            "network_security_group_name": "nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/publicIPAddresses/ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.219.38.11",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "ip",
            "resource_group_name": "rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet",
            "name": "subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "conn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet",
            "network_security_group_id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "subnet_id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet"
          },
          "dependencies": [
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "826eb07b-81f6-464b-a676-77f1170905ae",
            "id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "centralindia",
            "name": "vnet",
            "resource_group_name": "rg",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet",
                "name": "subnet",
                "security_group": "/subscriptions/af8b4d33-860a-4269-ba23-a037e1c8551c/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}